--- a/Draw/Controller/Shop/CommonItemInfoView~ipad.xib
+++ b/Draw/Controller/Shop/CommonItemInfoView~ipad.xib
@@ -42,7 +42,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrame">{{0, -10}, {768, 1024}}</string>
 						<reference key="NSSuperview" ref="444008462"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="889029020"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -85,7 +84,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{624, 493}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="284324708"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -96,7 +94,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{52, 67}, {122, 122}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1042869567"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -107,7 +104,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{33, 297}, {556, 2}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="297121548"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -121,7 +117,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{40, 322}, {72, 37}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="661194072"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -152,7 +147,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{208, 322}, {72, 37}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="93325268"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -180,7 +174,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{40, 394}, {192, 65}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="940388026"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -210,8 +203,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{398, 394}, {192, 65}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -230,7 +221,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{110, 314}, {100, 45}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="364029254"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -262,7 +252,6 @@
 								<int key="NSvFlags">319</int>
 								<string key="NSFrame">{{40, 210}, {549, 89}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="291528773"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -283,9 +272,8 @@
 							<object class="IBUILabel" id="1042869567">
 								<reference key="NSNextResponder" ref="889029020"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{208, 111}, {264, 45}}</string>
+								<string key="NSFrame">{{208, 111}, {221, 45}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="566096017"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -311,9 +299,8 @@
 							<object class="IBUILabel" id="566096017">
 								<reference key="NSNextResponder" ref="889029020"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{292, 80}, {115, 76}}</string>
+								<string key="NSFrame">{{437, 80}, {115, 76}}</string>
 								<reference key="NSSuperview" ref="889029020"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="978718182"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -339,7 +326,6 @@
 						</array>
 						<string key="NSFrame">{{72, 242}, {624, 493}}</string>
 						<reference key="NSSuperview" ref="444008462"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="201812954"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="273278171">
@@ -351,7 +337,6 @@
 				</array>
 				<string key="NSFrameSize">{768, 1004}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="431875059"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="273278171"/>
@@ -618,87 +603,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">31</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">CommonItemInfoView</string>
-					<string key="superclassName">UIView</string>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="backgroundImageView">UIImageView</string>
-						<string key="buyButton">UIButton</string>
-						<string key="cancelButton">UIButton</string>
-						<string key="coinCountLabel">UILabel</string>
-						<string key="coinLabel">UILabel</string>
-						<string key="contentView">UIView</string>
-						<string key="itemCountLabel">UILabel</string>
-						<string key="itemDescriptionLabel">UILabel</string>
-						<string key="itemImageView">UIImageView</string>
-						<string key="itemTitle">UILabel</string>
-						<string key="itemUnit">UILabel</string>
-						<string key="mask">UIButton</string>
-						<string key="priceLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="backgroundImageView">
-							<string key="name">backgroundImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="buyButton">
-							<string key="name">buyButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="cancelButton">
-							<string key="name">cancelButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="coinCountLabel">
-							<string key="name">coinCountLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="coinLabel">
-							<string key="name">coinLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="contentView">
-							<string key="name">contentView</string>
-							<string key="candidateClassName">UIView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemCountLabel">
-							<string key="name">itemCountLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemDescriptionLabel">
-							<string key="name">itemDescriptionLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemImageView">
-							<string key="name">itemImageView</string>
-							<string key="candidateClassName">UIImageView</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemTitle">
-							<string key="name">itemTitle</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="itemUnit">
-							<string key="name">itemUnit</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="mask">
-							<string key="name">mask</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="priceLabel">
-							<string key="name">priceLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/CommonItemInfoView.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
